# crow-template

./: CMakeLists.txt  README.md
amalgamate/: crow_all.h
shortcut/: compile.sh  example.cpp
src/: CMakeLists.txt  example.cpp
